Fix: QR countdown timer, session persistence, and vendor features
- Fixed QR countdown timer to properly show 5-minute countdown (4:59 to 0:00)
- Fixed session persistence (removed aggressive 403 auto-logout)
- Fixed require_role decorator for proper authorization checks
- Added vendor meal skip visibility on POS dashboard
- Added QR image upload fallback for vendors
- Updated seed data with proper demo accounts
- All verification tests passing for Student/Vendor/Admin roles

Tech Expo ready - all critical bugs fixed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.19",
     "framer-motion": "^12.27.1",
     "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.562.0",
     "postcss": "^8.4.31",
     "react": "^19.2.3",
